--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,10 @@
+@charset "UTF-8";
+/* 基础样式 */
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 a {
@@ -45,3 +48,183 @@ img {
   clear: both;
   visibility: hidden;
 }
+
+/* logo公共头部样式 */
+.logo-header {
+  background: #ff841d;
+  padding: .1rem .06rem .1rem  .14rem;
+  border-bottom: 2px solid #cccccc;
+}
+
+.logo-header .logo {
+  width: 3.71rem;
+  height: .5rem;
+  background: url("../images/header_logo.png");
+  background-size: 3.71rem .5rem;
+  margin-top: .1rem;
+}
+
+.logo-header .download {
+  width: .68rem;
+  height: .68rem;
+  background: url("../images/header_app.png");
+  background-size: .68rem .68rem;
+}
+
+/* 搜索框 */
+.search {
+  padding: .15rem .1rem;
+}
+
+.search input:first-child {
+  height: .5rem;
+  width: 5.1rem;
+  background: #f1f1f1;
+  border-radius: .30rem;
+  padding-left: .25rem;
+  font-size: .16rem;
+  color: #a9a9a9;
+}
+
+.search input:last-child {
+  height: .5rem;
+  width: 1rem;
+  border-radius: .30rem;
+  color: #fff;
+  background: #ff841d;
+  font-size: .18rem;
+}
+
+/* 底部信息 */
+footer {
+  background: #f1f1f1;
+  padding-top: .3rem;
+  padding-bottom: .1rem;
+}
+
+footer .footer-tools {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-top: 1px solid #c4c4c4;
+  border-bottom: 1px solid #c4c4c4;
+}
+
+footer .footer-tools > a {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  border-left: 1px solid #c4c4c4;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  padding: .08rem 0;
+  font-size: .16rem;
+}
+
+footer .footer-tools > a:first-child {
+  border-left: 0;
+}
+
+footer .footer-tools > a:last-child {
+  position: relative;
+}
+
+footer .footer-tools > a:last-child::before {
+  content: "";
+  width: 0;
+  height: 0;
+  border: .08rem solid #747474;
+  border-color: transparent transparent #747474  transparent;
+  position: absolute;
+  top: .04rem;
+  left: .45rem;
+}
+
+footer .footer-tools > a:last-child::after {
+  content: "";
+  width: .08rem;
+  height: .1rem;
+  background: #747474;
+  position: absolute;
+  top: .20rem;
+  left: .49rem;
+}
+
+footer .footer-copyright {
+  padding-top: .15rem;
+}
+
+footer .footer-copyright p {
+  text-align: center;
+  font-size: .14rem;
+  color: #727272;
+}
+
+footer .footer-copyright p:first-child > a {
+  display: inline-block;
+  color: red;
+}
+
+footer .footer-copyright p:last-child {
+  font-size: .12rem;
+  padding-top: .02rem;
+}
+
+/* 内容头部 */
+.content-header {
+  background: #ff841d;
+  padding: .1rem .06rem .1rem  .14rem;
+  border-bottom: 2px solid #cccccc;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.content-header .hd-back {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-left: .22rem;
+}
+
+.content-header .hd-back::before {
+  content: "";
+  display: block;
+  width: .18rem;
+  height: .18rem;
+  border-top: 2px solid #fff;
+  border-left: 2px solid #fff;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.content-header .hd-title {
+  color: #fff;
+  font-weight: 700;
+  font-size: .30rem;
+  padding-top: .1rem;
+}
+
+.content-header .hd-download {
+  width: .68rem;
+  height: .68rem;
+  background: url("../images/header_app.png");
+  background-size: .68rem .68rem;
+}
+/*# sourceMappingURL=base.css.map */
