--- a/css/base.scss
+++ b/css/base.scss
@@ -1,3 +1,4 @@
+/* 基础样式 */
 * {
     padding: 0;
     margin: 0;
@@ -44,4 +45,153 @@ img {
     line-height: 0;
     clear: both;
     visibility: hidden;
+}
+
+/* logo公共头部样式 */
+.logo-header{
+    background: #ff841d;
+    padding: .1rem .06rem .1rem  .14rem;
+    border-bottom: 2px solid #cccccc;
+    .logo{
+        width: 3.71rem;
+        height: .5rem;
+        background: url("../images/header_logo.png");
+        background-size: 3.71rem .5rem;
+        margin-top: .1rem;
+    }
+    .download{
+        width: .68rem;
+        height: .68rem;
+        background: url("../images/header_app.png");
+        background-size: .68rem .68rem;
+    }
+}
+
+/* 搜索框 */
+.search{
+    padding: .15rem .1rem;
+    input{
+        &:first-child{
+            height: .5rem;
+            width:  5.1rem;
+            background: #f1f1f1;
+            border-radius: .30rem;
+            padding-left: .25rem;
+            font-size: .16rem;
+            color: #a9a9a9;
+            
+        }
+        &:last-child{
+            height: .5rem;
+            width: 1rem;
+            border-radius: .30rem;
+            color: #fff;
+            background: #ff841d;
+            font-size: .18rem;
+        }
+    }   
+}
+
+/* 底部信息 */
+footer{
+    background: #f1f1f1;
+    padding-top: .3rem;
+    padding-bottom: .1rem;
+    .footer-tools{
+        display: flex;
+        border-top: 1px solid #c4c4c4;
+        border-bottom: 1px solid #c4c4c4;
+        >a{
+            flex: 1;
+            border-left: 1px solid #c4c4c4;
+            display: flex;
+            justify-content: center;
+            align-content: center;
+            padding: .08rem 0;
+            font-size: .16rem;
+            &:first-child{
+                border-left: 0;
+            }
+            &:last-child{
+                position: relative;
+                &::before{
+                    content: "";
+                    width: 0;
+                    height: 0;
+                    border: .08rem solid #747474;
+                    border-color:  transparent transparent #747474  transparent ;
+                    position: absolute;
+                    top: .04rem;
+                    left: .45rem;
+                }
+
+                &::after{
+                    content: "";
+                    width: .08rem;
+                    height: .1rem;
+                    background: #747474;
+                    position: absolute;
+                    top: .20rem;
+                    left: .49rem;
+                }
+
+            }
+        }
+    }
+    .footer-copyright{
+        padding-top: .15rem;
+        p{
+            text-align: center;
+            font-size: .14rem;
+             color: #727272;
+            &:first-child{
+                >a{
+                    display: inline-block;
+                    color: red;
+                }
+                
+            }
+            &:last-child{
+                font-size: .12rem;
+                padding-top: .02rem;
+            }
+        }
+    }
+}
+
+/* 内容头部 */
+.content-header{
+     background: #ff841d;
+     padding: .1rem .06rem .1rem  .14rem;
+     border-bottom: 2px solid #cccccc;
+     display: flex;
+     justify-content: space-between;
+  .hd-back{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding-left: .22rem;
+    &::before{
+        content: "";
+        display: block;
+        width: .18rem;
+        height: .18rem;
+        border-top: 2px solid #fff;
+        border-left: 2px solid #fff;
+        transform: rotate(-45deg);
+        
+    }
+  }
+  .hd-title{
+      color: #fff;
+      font-weight: 700;
+      font-size: .30rem;
+      padding-top: .1rem;
+  }
+  .hd-download{
+       width: .68rem;
+        height: .68rem;
+        background: url("../images/header_app.png");
+        background-size: .68rem .68rem;
+  }
 }
