首页缺头部尾部

--- a/css/index.css
+++ b/css/index.css
@@ -1,33 +1,27 @@
 .index-menu {
-<<<<<<< HEAD
-=======
   padding: 0.1rem 0;
->>>>>>> 1728bf5d25b5d6cd7ade0220e2829575dbb5a42a
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-<<<<<<< HEAD
-=======
-  height: 3rem;
-  overflow: hidden;
->>>>>>> 1728bf5d25b5d6cd7ade0220e2829575dbb5a42a
 }
 
 .index-menu a {
   padding: .08rem 0;
   text-align: center;
-  font-size: 0.12rem;
+  font-size: 0.21rem;
   width: 25%;
 }
-<<<<<<< HEAD
-=======
 
 .index-menu a img {
   padding: .08rem 0;
   margin: 0 auto;
   width: 50%;
+}
+
+.index-menu a:nth-last-child(-n+4) {
+  display: none;
 }
 
 .hr {
@@ -39,7 +33,7 @@
 .discount .discount_title {
   color: #fff;
   width: 100%;
-  font-size: 0.17rem;
+  font-size: 0.22rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -52,21 +46,34 @@
 }
 
 .discount .discount_content a {
-  font-size: 0.14rem;
-  padding-top: .16rem;
-  padding-left: 120px;
-  padding-right: 0.08rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   border-bottom: 1px solid #ccc;
+  font-size: 0.23rem;
+  padding: .1rem .1rem;
 }
 
-.discount .discount_content a div:last-child {
-  font-size: 0.12rem;
-  color: #999999;
+.discount .discount_content a .left {
+  padding: .15rem 0;
+  width: 35%;
 }
 
-.discount .discount_content a div:last-child {
+.discount .discount_content a .right {
+  margin-left: 0.18rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   padding-top: 0.38rem;
-  padding-bottom: 0.3rem;
+}
+
+.discount .discount_content a .right p:first-child {
+  height: 70%;
+}
+
+.discount .discount_content a .right p:last-child {
+  height: 30%;
+  color: #b6b5b5;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -81,7 +88,7 @@
 
 .more {
   padding: 0.1rem .1rem 0;
-  font-size: 0.12rem;
+  font-size: 0.22rem;
 }
 
 .more a {
@@ -95,7 +102,7 @@
 .rand .rand_title {
   color: #fff;
   width: 100%;
-  font-size: 0.17rem;
+  font-size: 0.22rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -106,5 +113,4 @@
   background-image: linear-gradient(#ffae00, #ff7b00);
   padding: .1rem .1rem;
 }
->>>>>>> 1728bf5d25b5d6cd7ade0220e2829575dbb5a42a
 /*# sourceMappingURL=index.css.map */
