完成优惠券和优惠券的数据渲染

--- a/css/base.css
+++ b/css/base.css
@@ -54,6 +54,8 @@ img {
   background: #ff841d;
   padding: .1rem .06rem .1rem  .14rem;
   border-bottom: 2px solid #cccccc;
+  position: fixed;
+  width: 100%;
 }
 
 .logo-header .logo {
@@ -187,6 +189,8 @@ footer .footer-copyright p:last-child {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  position: fixed;
+  width: 100%;
 }
 
 .content-header .hd-back {
