--- a/css/cjh-coupon-list.scss
+++ b/css/cjh-coupon-list.scss
@@ -5,7 +5,7 @@
 
 /*优惠券列表  */
 .cjh-coupon-list{
-  padding: .1rem .1rem .2rem .1rem;
+  padding: 1.1rem .1rem .2rem .1rem;
   border-bottom: 1px solid #efefef;
   .list-title{
     font-size: .14rem;
