--- a/css/cjh-coupon.css
+++ b/css/cjh-coupon.css
@@ -11,7 +11,7 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  padding: .3rem .1rem .1rem;
+  padding: 1.3rem .1rem .1rem;
 }
 
 .cjh-coupon > a {
