--- a/css/base.css
+++ b/css/base.css
@@ -56,6 +56,7 @@ img {
   border-bottom: 2px solid #cccccc;
   position: fixed;
   width: 100%;
+  z-index: 10;
 }
 
 .logo-header .logo {
@@ -75,7 +76,7 @@ img {
 
 /* 搜索框 */
 .search {
-  padding: .15rem .1rem;
+  padding: 1.15rem .1rem .15rem .1rem;
 }
 
 .search input:first-child {
