--- a/css/base.scss
+++ b/css/base.scss
@@ -54,6 +54,7 @@ img {
     border-bottom: 2px solid #cccccc;
     position: fixed;
     width: 100%;
+    z-index: 10;
     .logo{
         width: 3.71rem;
         height: .5rem;
@@ -71,7 +72,7 @@ img {
 
 /* 搜索框 */
 .search{
-    padding: .15rem .1rem;
+    padding: 1.15rem .1rem .15rem .1rem;
     input{
         &:first-child{
             height: .5rem;
