第八页,半成

--- a/css/cjh-coupon-list.css
+++ b/css/cjh-coupon-list.css
@@ -55,10 +55,12 @@
   height: .14rem;
   border-top: 1px solid #737373;
   border-left: 1px solid #737373;
-  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
 }
 
 .cjh-coupon-list .list-main .coupon-content .cou-con-left .data {
   padding-top: .2rem;
   color: #f08525;
 }
+/*# sourceMappingURL=cjh-coupon-list.css.map */
