--- a/css/index.css
+++ b/css/index.css
@@ -5,11 +5,6 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-<<<<<<< HEAD
-=======
-  height: 3rem;
-  overflow: hidden;
->>>>>>> a5f6bfef4a1b6ac4891ea72f35629158df239823
 }
 
 .index-menu a {
@@ -97,8 +92,9 @@
 }
 
 .more a {
-  border: 1px solid #cccccc;
-  background-color: #f0f0f0;
+  border: 1px solid #d1d1d1;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(whitesmoke), to(#dadada));
+  background-image: linear-gradient(whitesmoke, #dadada);
   border-radius: 5px;
   text-align: center;
   padding: 0.08rem 0;
