--- a/css/index.scss
+++ b/css/index.scss
@@ -74,8 +74,8 @@
     padding: 0.1rem .1rem 0;
     font-size: 0.22rem;
     a {
-        border: 1px solid rgb(204, 204, 204);
-        background-color: rgb(240, 240, 240);
+        border: 1px solid rgb(209, 209, 209);
+        background-image: linear-gradient(rgb(245, 245, 245), rgb(218, 218, 218));
         border-radius: 5px;
         text-align: center;
         padding: 0.08rem 0;
