--- a/css/cjh-coupon-list.css
+++ b/css/cjh-coupon-list.css
@@ -17,6 +17,10 @@
   padding-bottom: .2rem;
 }
 
+.cjh-coupon-list .list-main {
+  padding-bottom: .1rem;
+}
+
 .cjh-coupon-list .list-main .coupon-img {
   width: 30%;
 }
@@ -72,28 +76,8 @@
   top: 0;
   left: 0;
   z-index: 10;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.8);
   display: none;
-}
-
-.cjh-mark .mark-top {
-  width: 100%;
-  height: 38.1%;
-  background: rgba(0, 0, 0, 0.4);
-  z-index: 20;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-.cjh-mark .mark-bottom {
-  width: 100%;
-  height: 38.05%;
-  background: rgba(0, 0, 0, 0.4);
-  z-index: 20;
-  position: absolute;
-  bottom: 0;
-  left: 0;
 }
 
 .cjh-mark .cjh-slide {
@@ -101,7 +85,6 @@
   position: absolute;
   left: 50%;
   top: 50%;
-  background: rgba(0, 0, 0, 0.4);
   -webkit-transform: translateX(-50%) translateY(-50%);
           transform: translateX(-50%) translateY(-50%);
   z-index: 20;
