--- a/css/cjh-coupon-list.scss
+++ b/css/cjh-coupon-list.scss
@@ -14,6 +14,7 @@
     padding-bottom: .2rem;
   }
   .list-main{
+    padding-bottom: .1rem;
     .coupon-img{
       width: 30%;
       >img{
@@ -65,32 +66,14 @@
   top: 0;
   left: 0;
   z-index: 10;
-  background: rgba(0,0,0,.4);
+   background: rgba(0, 0, 0, 0.8);
   display: none;
-  .mark-top{
-    width: 100%;
-    height: 38.1%;
-    background: rgba(0, 0, 0, 0.4);
-    z-index: 20;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  .mark-bottom{
-    width: 100%;
-    height: 38.05%;
-    background: rgba(0, 0, 0, 0.4);
-    z-index: 20;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
+  
   .cjh-slide{
     width: 100%;
     position: absolute;
     left: 50%;
     top: 50%;
-     background: rgba(0, 0, 0, 0.4);
     transform: translateX(-50%) translateY(-50%); 
     z-index: 20; 
     img{
